/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Kotlin application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.5.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the org.jetbrains.kotlin.jvm Plugin to add support for Kotlin.
    alias(libs.plugins.kotlin.jvm)

    // Apply the application plugin to add support for building a CLI application in Java.
    application
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation(libs.javalin)
    implementation(libs.jackson.core)
    implementation(libs.jackson.jsr310)
    implementation(libs.jackson.df.csv)
    implementation(libs.jackson.df.yaml)
    implementation(libs.jackson.kotlin)
    implementation(libs.apache.avro)
    implementation(libs.apache.commons.collections)
    implementation(libs.apache.jexl3)
    implementation(libs.jsonPath)
    implementation(libs.snakeYaml)
    implementation(libs.slf4j)
    implementation(libs.logbackClassic)
    implementation(libs.micrometer.core)
    implementation(libs.micrometer.prom.registry)

    // Use the Kotlin Test integration.
    testImplementation("org.jetbrains.kotlin:kotlin-test")
    // Use the JUnit 5 integration.
    testImplementation(libs.junit.jupiter.engine)
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = "zincflow.ZinkKt"
}

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
